fixed title wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ main > section {
 }
 
 h1 {
-  font-size: 3.8rem;
+  font-size: calc(2rem + 1.7vw);
   color: var(--main-color);
   font-weight: 800;
   margin: 0rem;
@@ -120,7 +120,7 @@ h1 {
 
 h2 {
   color: var(--second-color);
-  font-size: 1.5rem;
+  font-size: calc(1rem + 0.6vw);
   font-weight: 400;
   margin: 0rem;
   margin-top: -0.4rem;
